# Centrality

./: .gitignore  .gitlab-ci.yml  BordersFinder2D_8hpp_source.html  BordersFinderHelper_8hpp_source.html  BordersFinder_8hpp_source.html  CMakeLists.txt  CONTRIBUTING.md  CentralityConfig.cmake.in  CentralityLinkDef_8hpp_source.html  Doxyfile  FitterHelper_8hpp_source.html  Fitter_8hpp_source.html  Getter_8hpp_source.html  README.md  annotated.html  classCentrality_1_1BordersFinder-members.html  classCentrality_1_1BordersFinder.html  classCentrality_1_1BordersFinder2D-members.html  classCentrality_1_1BordersFinder2D.html  classCentrality_1_1BordersFinderHelper-members.html  classCentrality_1_1BordersFinderHelper.html  classCentrality_1_1Getter-members.html  classCentrality_1_1Getter.html  classGlauber_1_1Fitter-members.html  classGlauber_1_1Fitter.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  main.cpp  run_centrality_analysis.cpp
.github/workflows/: clang.yml  cmake.yml  doxygen.yml
at_interface/: CMakeLists.txt  CentralityFiller.cpp  CentralityFiller.hpp  CentralityFiller.test.cpp
cmake/: AnalysisTree.cmake  CMakeLists-GTest.txt.in  CentralityConfig.sh.in  TestsSetupCentrality.cmake
datatree_interface/: DataFiller.cpp  DataFiller.h
docs/: CONTRIBUTING.md
glauber/: Fitter.cpp  Fitter.h  FitterHelper.cpp  FitterHelper.h  HowTo.txt  main.C  main.cpp
glauber/macro/: Chi2.C  HistoCompare.C  RunGlauberAna.C  TreeReader.C  plot_chi2.C  run.sh  run_glauberfit.sh  run_glauberfit1.sh  run_glauberfit1Energy.sh  run_glauberfit1Mult.sh  run_glauberfit2.sh  run_glauberfit2Energy.sh  run_glauberfit2Mult.sh
input/: MultBuilder.C  MultBuilder.h  multiplicity_qa.urqmd.12agev.root  test_input.root
macro/: HistoCompare.C  RunGlauberAna.C  TestGetter.C  TreeReader.C  chi2plotter.C  chi2plotter.h  plot_chi2.C  rootlogon.C
macro/batch/: batch_run.sh  run.sh  run_glauberfit.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  pages_0.js  pages_1.js  searchdata.js
src/: BordersFinder.cpp  BordersFinder.h  BordersFinder.hpp  BordersFinder.test.cpp  BordersFinder2D.cpp  BordersFinder2D.h  BordersFinder2D.hpp  BordersFinderHelper.cpp  BordersFinderHelper.h  BordersFinderHelper.hpp  CMakeLists.txt  CentralityLinkDef.h  CentralityLinkDef.hpp  Container.cpp  Container.h  Converter1D.cpp  Converter1D.h  Detector.h  Event.h  Fitter.cpp  Fitter.hpp  FitterHelper.cpp  FitterHelper.hpp  Getter.cpp  Getter.h  Getter.hpp  Getter.test.cpp
tasks/: CMakeLists.txt  fill_centrality.cpp  glauber.cpp  main.cpp
